# radio

./: .gitignore  AGENTS.md  README.md  main.py  parse_pdf.py  pyproject.toml  run.py
api/: __init__.py  app.py
data/: practice.db  questions.json
parser/: __init__.py  pdf_parser.py  question.py
practice/: __init__.py  manager.py
static/: app.js  index.html  styles.css
storage/: __init__.py  database.py
tests/: test_api.py  test_parser.py  test_practice.py
